--- a/app/src/main/res/layout/activity_demo_http.xml
+++ b/app/src/main/res/layout/activity_demo_http.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".httpdemo.DemoHttpActivity">
+    tools:context=".DemoUtilsActivity">
 
     <Button
         android:id="@+id/button3"
