--- a/app/src/main/res/layout/activity_demo_http.xml
+++ b/app/src/main/res/layout/activity_demo_http.xml
@@ -1,19 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#336699"
     tools:context=".DemoUtilsActivity">
 
-    <Button
-        android:id="@+id/button3"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:orientation="horizontal">
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#789789"
+            app:tab_button_height="200dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="1"
+            app:tab_orientation="2" />
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="#789789"
+            app:tab_button_height="200dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="2"
+            app:tab_orientation="2" />
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="#789789"
+            app:tab_button_height="200dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="3"
+            app:tab_orientation="2" />
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="#789789"
+            app:tab_button_height="200dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="4"
+            app:tab_orientation="2" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton2"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#123123"
+            app:tab_button_height="45dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            android:layout_marginBottom="10dp"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="1"
+            app:tab_orientation="1" />
+
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton6"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#123123"
+            app:tab_button_height="45dp"
+            app:tab_button_icon_visible="true"
+            android:layout_marginBottom="10dp"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_button_width="-1px"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="2"
+            app:tab_orientation="1" />
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton7"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#123123"
+            app:tab_button_height="45dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            android:layout_marginBottom="10dp"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="3"
+            app:tab_orientation="1" />
+        <com.tson.utils.view.tab.TabButton
+            android:id="@+id/tabButton8"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="#123123"
+            app:tab_button_height="45dp"
+            android:layout_marginBottom="10dp"
+            app:tab_button_icon_visible="true"
+            app:tab_button_text_size="16sp"
+            app:tab_button_text_visible="true"
+            app:tab_dividing_line_visible="true"
+            app:tab_gravity="1"
+            app:tab_icon_text_interval="-8dp"
+            app:tab_icon_text_model="4"
+            app:tab_orientation="1" />
+    </LinearLayout>
+
+</RelativeLayout>
