utils view TabButton 字体颜色设置简化、水波纹添加

--- a/app/src/main/res/layout/activity_demo_http.xml
+++ b/app/src/main/res/layout/activity_demo_http.xml
@@ -89,6 +89,7 @@
             android:layout_height="45dp"
             android:layout_marginBottom="10dp"
             android:background="#123123"
+            app:foreground="@drawable/ttt"
             app:tab_button_height="45dp"
             app:tab_button_icon_visible="true"
             app:tab_button_text_size="16sp"
@@ -97,7 +98,9 @@
             app:tab_gravity="1"
             app:tab_icon_text_interval="-8dp"
             app:tab_icon_text_model="1"
-            app:tab_orientation="1" />
+            app:tab_orientation="1"
+            app:tab_text_def_color="@color/colorAccent"
+            app:tab_text_select_color="@color/selectTextColor" />
 
         <com.tson.utils.view.tab.TabButton
             android:id="@+id/tabButton6"
@@ -170,16 +173,16 @@
 
         <Button
             android:id="@+id/index"
-            android:text="index"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="index" />
 
 
         <Button
             android:id="@+id/remove"
-            android:text="remove"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="remove" />
 
     </LinearLayout>
 
