--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="defText">#000000</color>
     <color name="selectText">#ec7d28</color>
+    <color name="selectTextColor">#f596ff</color>
 </resources>
