--- a/utilsview/src/main/res/values/colors.xml
+++ b/utilsview/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPressed">#CF919191</color>
+    <color name="black20">#33000000</color>
     <color name="translation">#00000000</color>
     <color name="lines_color">#b3b3b3</color>
     <color name="select_color">#ed8216</color>
     <color name="def_color">#000000</color>
+    <color name="red">#ff0000</color>
 </resources>
