--- a/utilsview/src/main/res/values/attrs.xml
+++ b/utilsview/src/main/res/values/attrs.xml
@@ -33,6 +33,8 @@
         <attr name="foreground" format="reference" />
         <attr name="tab_text_def_color" format="reference" />
         <attr name="tab_text_select_color" format="reference" />
+        <attr name="tab_icon_width" format="dimension" />
+        <attr name="tab_icon_height" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="DrawableTextView">
