--- a/app/src/main/res/layout/activity_demo_http.xml
+++ b/app/src/main/res/layout/activity_demo_http.xml
@@ -112,6 +112,10 @@
             android:background="#123123"
             app:tab_button_height="45dp"
             app:tab_button_icon_visible="true"
+            app:tab_button_padding_bottom="@dimen/padding"
+            app:tab_button_padding_left="@dimen/padding"
+            app:tab_button_padding_right="@dimen/padding"
+            app:tab_button_padding_top="@dimen/padding"
             app:tab_button_text_size="16sp"
             app:tab_button_text_visible="true"
             app:tab_button_width="-1px"
@@ -127,6 +131,7 @@
             android:layout_height="45dp"
             android:layout_marginBottom="10dp"
             android:background="#123123"
+            app:tab_button_padding="@dimen/padding"
             app:tab_button_height="45dp"
             app:tab_button_icon_visible="true"
             app:tab_button_text_size="16sp"
@@ -145,6 +150,8 @@
             android:background="#123123"
             app:tab_button_height="45dp"
             app:tab_button_icon_visible="true"
+            app:tab_button_padding_left="@dimen/padding"
+            app:tab_button_padding_right="@dimen/padding"
             app:tab_button_text_size="16sp"
             app:tab_button_text_visible="true"
             app:tab_dividing_line_visible="true"
