--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="icon_w">5dp</dimen>
-    <dimen name="icon_h">5dp</dimen>
+    <dimen name="icon_w">15dp</dimen>
+    <dimen name="icon_h">15dp</dimen>
+    <dimen name="padding">5dp</dimen>
 </resources>
