--- a/utilsview/src/main/res/values/attrs.xml
+++ b/utilsview/src/main/res/values/attrs.xml
@@ -28,6 +28,7 @@
         <attr name="tab_gravity" format="integer" />
         <!--分割线Dividing line  true 显示  false 不显示-->
         <attr name="tab_dividing_line_visible" format="boolean" />
+        <attr name="tab_dividing_line_color" format="reference" />
         <!--tab 模式: 2 vertical 纵向 1 horizontal 横向-->
         <attr name="tab_orientation" format="integer" />
         <attr name="foreground" format="reference" />
