--- a/utilsview/src/main/res/layout/item_cancel.xml
+++ b/utilsview/src/main/res/layout/item_cancel.xml
@@ -19,5 +19,6 @@
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:gravity="center"
-        android:text="@string/cancel" />
+        android:text="@string/cancel"
+        android:textColor="@color/content_color" />
 </LinearLayout>
