--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -29,11 +29,24 @@
             android:layout_height="wrap_content"
             android:text="need crop image?" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/bottomSheet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="bottomSheet" />
+
+        <Button
+            android:id="@+id/button14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="free" />
 
     </LinearLayout>
 
