--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".TestRecyclerViewActivity">
 
     <Button
@@ -16,6 +17,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="show"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/hide_load"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,13 +31,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="hide"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/not_more"
@@ -45,6 +49,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="not more"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hide_load" />
 
@@ -56,7 +61,19 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="show loading"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/not_more"
         app:layout_constraintTop_toBottomOf="@+id/show_load" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="remove"
+        app:layout_constraintEnd_toStartOf="@+id/not_more"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 </android.support.constraint.ConstraintLayout>
